--- a/productos/templates/productos/index.html
+++ b/productos/templates/productos/index.html
@@ -36,9 +36,9 @@
             <a href="/inicio-sesion"><i class="fa-solid fa-user icono"></i>Iniciar Sesión</a>			
             <a href="/contacto" target="_blank"><i class="fa-solid fa-phone icono"></i>Contacto</a>
             <a href="/quienes-somos"><i class="fa-solid fa-users icono"></i>Quiénes somos</a>
-            <a href="#"><i class="fa-solid fa-gear icono"></i>Ajustes</a>
+            <a href="/listar-producto"><i class="fa-solid fa-gear icono"></i>Ajustes</a>
             <a class="corona" href="/version-pro"><i class="fa-solid fa-crown icono"></i>Pro</a>
-            <i id="finalmenu" class="fa-solid fa-globe"></i>
+            <a href=""><i class="fa-brands fa-mixcloud"></i></i>API</a>
 		</nav>
 		<label for="btn-menu"><i class="fa-solid fa-xmark"></i></label>
 	</div>
