--- a/productos/static/productos/css/estilo-contacto.css
+++ b/productos/static/productos/css/estilo-contacto.css
@@ -12,7 +12,7 @@
 body {
     background: #E5E5E5;
     background-repeat: no-repeat;
-    background-image: url(../imagenes/bg4.jpg);
+    background-image: url(../image/bg4.jpg);
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
