--- a/productos/static/productos/css/estilo-quienes.css
+++ b/productos/static/productos/css/estilo-quienes.css
@@ -7,7 +7,7 @@
 body {
     /* ATRIBUTOS BACKGROUND DE BODY */
     background-repeat: no-repeat;
-    background-image: url(../imagenes/bg4.jpg);
+    background-image: url(../image/bg4.jpg);
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
