--- a/productos/static/productos/css/estilo-inicio_sesion.css
+++ b/productos/static/productos/css/estilo-inicio_sesion.css
@@ -12,7 +12,7 @@
 body {
     background: #E5E5E5;
     background-repeat: no-repeat;
-    background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0)), url(../imagenes/bg4.jpg);
+    background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0)), url(../image/bg4.jpg);
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
