--- a/productos/static/productos/css/estilo-registro.css
+++ b/productos/static/productos/css/estilo-registro.css
@@ -16,7 +16,7 @@ body {
     font-family: 'Roboto', sans-serif;
     background: #E5E5E5;
     background-repeat: no-repeat;
-    background-image: url(../imagenes/bg4.jpg);
+    background-image: url(../image/bg4.jpg);
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
