--- a/productos/static/productos/css/estilo-version_pro.css
+++ b/productos/static/productos/css/estilo-version_pro.css
@@ -12,7 +12,7 @@ header {
 body{
     font-family: 'Press Start 2P', cursive;
     background-color: #ffffff;
-    background-image: url(../imagenes/bg4.jpg);
+    background-image: url(../image/bg4.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -122,7 +122,7 @@ body{
     -o-transform: translateY(100px);
     padding: 40px 30px;
     height: 450px;
-    background: linear-gradient(rgba(0, 0, 0, 0.605), rgba(0, 0, 0, 0.7)), url(../imagenes/fsociety.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.605), rgba(0, 0, 0, 0.7)), url(../image/fsociety.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -135,7 +135,7 @@ body{
 }
 
 .fsociety:hover{
-    background: linear-gradient(rgba(0, 0, 0, 0.777), rgba(98, 95, 95, 0.049)), url(../imagenes/fsociety.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.777), rgba(98, 95, 95, 0.049)), url(../image/fsociety.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -152,7 +152,7 @@ body{
 }
 
 .anonymous{
-    background: linear-gradient(rgba(0, 0, 0, 0.832), rgba(0, 0, 0, 0.481)), url(../imagenes/anonymous.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.832), rgba(0, 0, 0, 0.481)), url(../image/anonymous.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -172,7 +172,7 @@ body{
 }
 
 .anonymous:hover{
-    background: linear-gradient(rgb(0, 0, 0), rgba(255, 217, 0, 0.132)), url(../imagenes/anonymous.jpg);
+    background: linear-gradient(rgb(0, 0, 0), rgba(255, 217, 0, 0.132)), url(../image/anonymous.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -190,7 +190,7 @@ body{
 
 
 .darkarmy{
-    background: linear-gradient(rgba(0, 0, 0, 0.832), rgba(0, 0, 0, 0.481)), url(../imagenes/darkarmy.png);
+    background: linear-gradient(rgba(0, 0, 0, 0.832), rgba(0, 0, 0, 0.481)), url(../image/darkarmy.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -206,7 +206,7 @@ body{
 }
 
 .darkarmy:hover{
-    background: linear-gradient(rgb(0, 0, 0), rgba(255, 136, 0, 0.132)), url(../imagenes/darkarmy.png);
+    background: linear-gradient(rgb(0, 0, 0), rgba(255, 136, 0, 0.132)), url(../image/darkarmy.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
