--- a/productos/templates/productos/index.html
+++ b/productos/templates/productos/index.html
@@ -20,31 +20,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Smokum&display=swap" rel="stylesheet">
 </head>
 <body>
-    
     <header>
-        <div class="container">
-		    <div class="btn-menu">
-			    <label for="btn-menu"><i class="fa-solid fa-bars"></i></label>
-		    </div>
-		</div>
-	<div class="capa"></div>
-<input type="checkbox" id="btn-menu">
-<div class="container-menu">
-	<div class="cont-menu">
-		<nav>
-            <a href="/inicio-sesion"><i class="fa-solid fa-user icono"></i>Iniciar Sesión</a>			
-            <a href="/contacto" target="_blank"><i class="fa-solid fa-phone icono"></i>Contacto</a>
-            <a href="/quienes-somos"><i class="fa-solid fa-users icono"></i>Quiénes somos</a>
-            <a href="/listar-producto"><i class="fa-solid fa-gear icono"></i>Ajustes</a>
-            <a class="corona" href="/version-pro"><i class="fa-solid fa-crown icono"></i>Pro</a>
-            <a href=""><i class="fa-brands fa-mixcloud"></i></i>API</a>
-		</nav>
-		<label for="btn-menu"><i class="fa-solid fa-xmark"></i></label>
-	</div>
-</div>
+        <div id="contenedor_menu">
+            
+        </div>
         <div class="contenedor-titulo">
             <ul id="titulo">
-                    <li class="titulotxt">TECHn <i class="fa-solid fa-globe"></i> World</li>
+                <li class="titulotxt">TECHn <i class="fa-solid fa-globe"></i> World</li>
             </ul>
             <div class="servicios">
                 <p>Servicios Informáticos||Mantención||Seguridad||Rooteo||¡Y mucho más en TECHno World!</p>
@@ -52,7 +34,6 @@
         </div>
         <div id="productos">
             <h1>Productos</h1>
-
             <div class="contenido-header">
                 <section>
                     <div id="contenedor-articulo" class="carousel slide" data-bs-ride="carousel">   
