--- a/productos/templates/productos/index.html
+++ b/productos/templates/productos/index.html
@@ -22,7 +22,16 @@
 <body>
     <header>
         <div id="contenedor_menu">
-            
+            <nav>
+                <ul>
+                    <li><a href="/inicio-sesion"><i class="fa-solid fa-user icono"></i>Iniciar Sesión</a></li>
+                    <li><a href="/contacto" target="_blank"><i class="fa-solid fa-phone icono"></i>Contacto</a></li>
+                    <li><a href="/quienes-somos"><i class="fa-solid fa-users icono"></i>Quiénes somos</a></li>
+                    <li><a href="/listar-producto"><i class="fa-solid fa-gear icono"></i>Ajustes</a></li>
+                    <li><a class="corona" href="/version-pro"><i class="fa-solid fa-crown icono"></i>Pro</a></li>
+                    <li></li>
+                </ul>
+            </nav>
         </div>
         <div class="contenedor-titulo">
             <ul id="titulo">
