--- a/productos/templates/productos/index.html
+++ b/productos/templates/productos/index.html
@@ -30,32 +30,10 @@
                     <li><a href="/quienes-somos"><i class="fa-solid fa-users icono"></i>Quiénes somos</a></li>
                     <li><a href="/listar-producto"><i class="fa-solid fa-gear icono"></i>Ajustes</a></li>
                     <li><a class="corona" href="/version-pro"><i class="fa-solid fa-crown icono"></i>Pro</a></li>
-                    <li></li>
+                    <li><a href="#"><i class="fa-brands fa-mixcloud">API</i></a></li>
                 </ul>
             </nav>
         </div>
-=======
-        <div class="container">
-		    <div class="btn-menu">
-			    <label for="btn-menu"><i class="fa-solid fa-bars"></i></label>
-		    </div>
-		</div>
-	<div class="capa"></div>
-<input type="checkbox" id="btn-menu">
-<div class="container-menu">
-	<div class="cont-menu">
-		<nav>
-            <a href="/inicio-sesion"><i class="fa-solid fa-user icono"></i>Iniciar Sesión</a>			
-            <a href="/contacto" target="_blank"><i class="fa-solid fa-phone icono"></i>Contacto</a>
-            <a href="/quienes-somos"><i class="fa-solid fa-users icono"></i>Quiénes somos</a>
-            <a href="/listar-producto"><i class="fa-solid fa-gear icono"></i>Ajustes</a>
-            <a class="corona" href="/version-pro"><i class="fa-solid fa-crown icono"></i>Pro</a>
-            <i id="finalmenu" class="fa-solid fa-globe"></i>
-		</nav>
-		<label for="btn-menu"><i class="fa-solid fa-xmark"></i></label>
-	</div>
-</div>
->>>>>>> main
         <div class="contenedor-titulo">
             <ul id="titulo">
                 <li class="titulotxt">TECHn <i class="fa-solid fa-globe"></i> World</li>
