--- a/productos/templates/productos/lista_producto.html
+++ b/productos/templates/productos/lista_producto.html
@@ -22,6 +22,8 @@
                 <th scope="col">Marca</th>
                 <th scope="col">Modificar</th>
                 <th scope="col">Eliminar</th>
+                <th scope="col">Api</th>
+                <th scope="col">Modificar Api</th>
             </tr>
             </thead>
             <tbody>
