--- a/productos/templates/productos/subir_img.html
+++ b/productos/templates/productos/subir_img.html
@@ -12,7 +12,7 @@
 <body>
     <form method = "post" class="clase-form" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form.as_table }}
         <button type="submit" class = "save btn btn-primary">Subir</button>
         <button type="reset" class = "btn btn-secondary">Reset</button>
         <a class="btn btn-danger" href="{% url 'ListarProducto' %}" role="button">Volver</a>
