--- a/productos/static/productos/css/estilo-index.css
+++ b/productos/static/productos/css/estilo-index.css
@@ -7,7 +7,7 @@
 
 body {
     background-color: #ffffff;
-    background-image: url(../image/bg4.jpg);
+    background-image: url(../imagenes/bg4.jpg);
     background-position: center center;
     background-attachment: fixed;
     background-repeat: no-repeat;
