--- a/productos/templates/productos/lista_producto.html
+++ b/productos/templates/productos/lista_producto.html
@@ -33,7 +33,33 @@
                 <td>{{prod.nombre}}</td>
                 <td>{{prod.precio}}</td>
                 <td>{{prod.marca}}</td>
-                <td><a href="{% url 'Modificar' prod.idpro %}">Modificar</a></td>
+                <td></td>
+                <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+    Modificar
+  </button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Confirmar</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+          
+          <button type="button" class="btn btn-primary"><a href="{% url 'Modificar' prod.idpro %}">Modificar</a></button>
+        </div>
+      </div>
+    </div>
+  </div>
                 <td><a href="{% url 'Eliminar' prod.idpro %}">Eliminar</a></td>
                 <td><a href="{% url 'lista_prod' %}">API</a></td>
                 <td><a href="{% url 'detalle_prod' prod.idpro %}">Modificar API</a></td>
