--- a/productos/static/productos/css/estilo-index.css
+++ b/productos/static/productos/css/estilo-index.css
@@ -104,7 +104,7 @@ h1 {
 
 #titulo {
     background-attachment: fixed;
-    background-image: url(../image/tecno.jpg);
+    background-image: url(../imagenes/tecno.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
