fix modificar foto

--- a/productos/templates/productos/modificar.html
+++ b/productos/templates/productos/modificar.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="row">
-        <form action="" method="post" id="formulario">
+        <form action="" method="post" enctype="multipart/form-data" id="formulario">
             {% csrf_token %}
 
             <div class="form_group">
