--- a/productos/static/productos/css/estilo-simg.css
+++ b/productos/static/productos/css/estilo-simg.css
@@ -1,3 +1,4 @@
+/*
 .post-form label{
     background-color: rgb(128, 94, 94);
     font-size: 50px;
@@ -7,4 +8,5 @@
     font-size: 30px;
     border-radius: 50%;
 }
+*/
 
