--- a/productos/templates/productos/lista_producto.html
+++ b/productos/templates/productos/lista_producto.html
@@ -12,7 +12,10 @@
     <link rel="stylesheet" href="{% static 'productos/css/estilo-listar.css'%}">
 </head>
 <body>
-    <div class="container d-flex justify-content-center">
+    <div class="container d-flex flex-column justify-content-center bg-light my-2 rounded p-0 w-50">
+      <div class="titulo d-flex justify-content-center bg-primary rounded">
+        <h1 class="text-white">INGRESE TITULO DE EJEMPLO</h1>
+      </div>
         <table class="table">
             <thead>
             <tr>
@@ -71,11 +74,12 @@
             
             
         </table>
+        <div class="botones d-flex justify-content-center bg-light rounded gap-3 my-2">
+          <a class="btn btn-primary" href="{% url 'Subir-Foto' %}" role="button">Agregar</a>
+          <a class="btn btn-primary" href="{% url 'Inicio' %}" role="button">Volver</a>
+      </div>
     </div>
-    <div class="botones d-flex justify-content-center align-content-center gap-3">
-        <a class="btn btn-primary" href="{% url 'Subir-Foto' %}" role="button">Agregar</a>
-        <a class="btn btn-primary" href="{% url 'Inicio' %}" role="button">Volver</a>
-    </div>
+    
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
