--- a/productos/templates/productos/subir_img.html
+++ b/productos/templates/productos/subir_img.html
@@ -10,12 +10,25 @@
     <link rel="stylesheet" href="{% static 'productos/css/estilo-simg.css'%}">
 </head>
 <body>
-    <form method = "post" class="clase-form" enctype="multipart/form-data">
+    <form method = "post" class="post-form" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_table }}
-        <button type="submit" class = "save btn btn-primary">Subir</button>
-        <button type="reset" class = "btn btn-secondary">Reset</button>
-        <a class="btn btn-danger" href="{% url 'ListarProducto' %}" role="button">Volver</a>
+        <div class="container bg-light rounded p-0 my-2 w-50">
+            <div class="titulo d-flex justify-content-center bg-primary rounded">
+                <h1 class="text-white">INGRESE TITULO DE EJEMPLO</h1>
+            </div>
+            <div class="formulario d-flex flex-column justify-content-center p-2 gap-3">
+                {{ form.as_table }}
+            </div>
+            
+            <div class="botones d-flex justify-content-center bg-light rounded gap-3 my-2">
+                <button type="submit" class = "save btn btn-primary">Subir</button>
+                <button type="reset" class = "btn btn-secondary">Reset</button>
+                <a class="btn btn-primary" href="{% url 'ListarProducto' %}" role="button">Volver</a>
+            </div>
+        </div>
+        
+        
+        
     </form>
 </body>
 
