--- a/productos/templates/productos/lista_producto.html
+++ b/productos/templates/productos/lista_producto.html
@@ -60,7 +60,7 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
           
-          <button type="button" class="btn btn-dark"><a href="{% url 'Eliminar' prod.idpro %}">Eliminar</a></button>
+          <button type="button" class="btn btn-danger"><a href="{% url 'Eliminar' prod.idpro %}"></a>Eliminar</button>
         </div>
       </div>
     </div>
