--- a/productos/static/productos/css/estilo-listar.css
+++ b/productos/static/productos/css/estilo-listar.css
@@ -1,3 +1,12 @@
 .botones {
     font-size: 30px;
 }
+::-webkit-scrollbar{
+    width: 20%;
+}
+::-webkit-scrollbar-track{
+    background: #dddddd;
+}
+::-webkit-scrollbar-thumb{
+    background: #0d6efd;
+}
