Mensajes de Error

--- a/knoxapp/templates/login.html
+++ b/knoxapp/templates/login.html
@@ -9,7 +9,8 @@
         </div>
     </div>
     <div id="error" class="alert alert-success" role="alert">
-        {{ mensaje }}
+        {% block content %}
+        {% endblock %}
     </div>
     
 </form>
