--- a/knoxapp/templates/mensaje.html
+++ b/knoxapp/templates/mensaje.html
@@ -1,8 +1,9 @@
 
 {%load rest_framework%}
 
-Username: {{username}}
+{{username}}
 <br>
-Password: {{ password }}
+{{ password }}
 <br>
+{{mensaje}}
 
