--- a/knoxapp/templates/mensaje.html
+++ b/knoxapp/templates/mensaje.html
@@ -1,9 +1,15 @@
 
 {%load rest_framework%}
+{%load rest_framework%}
 
-{{username}}
+Username :{{username}}
 <br>
-{{ password }}
+Email :{{email}}
 <br>
-{{mensaje}}
+Password :{{ password }}
+<br>
+Mensaje Error JSON :{{mensaje}}
+<br>
+Respuesta Serializer: {{user}}
+
 
