Carrito creado y funcional

--- a/productos/static/productos/css/estilo-listar.css
+++ b/productos/static/productos/css/estilo-listar.css
@@ -1,3 +1,8 @@
 .botones {
     font-size: 30px;
 }
+
+body{
+    background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0)), url(../image/bg4.jpg);
+
+}
