--- a/productos/templates/productos/lista_producto.html
+++ b/productos/templates/productos/lista_producto.html
@@ -9,9 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'productos/css/estilo-listar.css'%}">
+    <link rel="stylesheet" href="{% static 'css/estilo-listar.css'%}">
 </head>
-<body>
+<body   >
     <div class="container d-flex flex-column justify-content-center bg-light my-2 rounded p-0 w-50">
       <div class="titulo d-flex justify-content-center bg-primary rounded">
         <h1 class="text-white">INGRESE TITULO DE EJEMPLO</h1>
