--- a/CarritoApp/templates/carrito.html
+++ b/CarritoApp/templates/carrito.html
@@ -50,8 +50,32 @@
     </div>
     <div class="row text-center">
         <div class="col-6"><a href="{% url 'CLS' %}" class="btn btn-danger">Limpiar</a></div>
-        <div class="col-6"><a href="#" class="btn btn-success">Guardar</a></div>
-    </div>  
+        <div class="col-6"><a href="#" class="btn btn-success">Comprar</a></div>
+        <script>
+          function equisde(){
+            swal({
+              title: "¿Seguro que quieres comprarlo?",
+              text: "Su compra podrá ser reembolsada en un plazo de 15 días",
+              icon: "warning",
+              buttons: true,
+              dangerMode: true,
+            })
+            .then((willDelete) => {
+              if (willDelete) {
+                swal("Su compra se ha realizado con éxito!", {
+                  icon: "success",
+                });
+              } else {
+                swal("¡Ups! Hubo un error en su compra", {
+                  icon: "error",
+                });
+              }
+            });
+          }
+          </script>
+    </div>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
 </body>
