--- a/CarritoApp/templates/carrito.html
+++ b/CarritoApp/templates/carrito.html
@@ -50,7 +50,7 @@
     </div>
     <div class="row text-center">
         <div class="col-6"><a href="{% url 'CLS' %}" class="btn btn-danger">Limpiar</a></div>
-        <div class="col-6"><a href="#" class="btn btn-success">Comprar</a></div>
+        <div class="col-6"><a href="#" class="btn btn-success" onclick="equisde()">Comprar</a></div>
         <script>
           function equisde(){
             swal({
