--- a/knoxapp/templates/login.html
+++ b/knoxapp/templates/login.html
@@ -17,26 +17,27 @@
     <div class="titulo d-flex justify-content-center bg-primary rounded-end rounded-start">
         <h1 class="text-white">Login</h1>
       </div>
-    <form target="" action="{% url 'login-valida' %}" method="post" validate>
+    <form target="" action="{% url 'logincustom' %}" method="post" validate>
         {% csrf_token %}
         <div class="form-control">
             {% render_form serializer %}
+            {{mensaje}}
         </div>
-        
         <div class="form-group">
             <div class="d-flex justify-content-center text-center p-2 gap-3">
                 <button type="submit" class="btn btn-primary"><i class="bi bi-box-arrow-in-right"> Login</i></button>
                 <a class="btn btn-primary" href="{% provider_login_url 'google' %}" role="button"><i class="bi bi-google"> Google</i></a>
-                <a class="btn btn-primary" href="{% url 'logoutknox' %}" role="button"><i class="bi bi-box-arrow-left"> LogOut</i></a>
+                <a class="btn btn-primary" href="{% url 'logoutcustom' %}" role="button"><i class="bi bi-box-arrow-left"> LogOut</i></a>
             </div>
         </div>
         <div class="form-group">
             <div class="d-flex justify-content-center text-center p-4 gap-3">
                 <h5>¿No tienes cuenta? Haz click en el boton registrarse</h5>
-                <a class="btn btn-primary" href="{% url 'register' %}" role="button"><i class="bi bi-box-arrow-left"> Registrarse</i></a>
+                <a class="btn btn-primary" href="{% url 'registercustom' %}" role="button"><i class="bi bi-box-arrow-left"> Registrarse</i></a>
             </div>
         </div>
     </form>
+
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
